--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "inquirer": "^8.2.6",
